# moavi

./: .gitignore  Makefile  README.en.md  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
cogsworth_api/: asgi.py  settings.py  urls.py  wsgi.py
templates/: appointments.html  base.html  consumptions.html  schedules.html  welcome.html
templates/registration/: login.html
v1/: admin.py  forms.py
v1/migrations/: 0001_initial.py
v1/models/: __init__.py  appointments.py  consumptions.py
v1/tests/: __init__.py
v1/tests/tests_models/: __init__.py  appointments.py  consumptions.py
v1/tests/tests_views/: __init__.py  appointments.py  consumptions.py  schedules.py
v1/views/: __init__.py  appointments.py  consumptions.py  schedules.py  welcome.py
white_rabbit_api/: asgi.py  settings.py  urls.py  wsgi.py
