[tool.poetry]
name = "white_rabbit_api"
version = "0.1.0"
description = ""
authors = ["Lucas Pereira <lucasmdpereira@gmail.com>"]
readme = "README.md"
packages = [{include = "white_rabbit_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pytz = "^2023.3"
django-widget-tweaks = "^1.4.8"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
